Error in layout tests: "Passed ITP enabled state (0) does not match TCC setting (1)" https://bugs.webkit.org/show_bug.cgi?id=220385 <rdar://problem/70730482>

Reviewed by Darin Adler.

No new tests, this has no behavior change. It will fix excessive
logging when running tests.

We do not need to log a discrepancy between these states
for WebKitTestRunner or TestWebKitAPI because they are sometimes treated
like web browsers but need to turn ITP on/off for specific tests, so
these states will not always match.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::activateSessionCleanup):
* Shared/Cocoa/DefaultWebBrowserChecks.h:
* Shared/Cocoa/DefaultWebBrowserChecks.mm:
(WebKit::isRunningTest):
(WebKit::isParentProcessAFullWebBrowser):
(WebKit::isFullWebBrowser):
(WebKit::shouldBeTreatedAsFullBrowser): Deleted.


Canonical link: https://commits.webkit.org/232862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271283 268f45cc-cd09-0410-ab3c-d52691b4dbfc